--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
     
         <section>
-               <h1>Welcome to my Page</h1>
+               <h1 style=" color: white;">Welcome to my Page</h1>
         </section>  
     
         <footer class="">
