--- a/resume.html
+++ b/resume.html
@@ -1,31 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 
 <head>
     <title>Resume</title>
     <link rel="stylesheet" type="text/css" href="resume-style.css" media="screen">
-    <style>
-        body {
-            background-color: #333; /* Dark background */
-            color: black; /* Black text */
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        h1, h2 {
-            color: black; /* Black color for headings */
-        }
-        .header, .footer {
-            background-color: #444; /* Darker background for header and footer */
-            padding: 10px;
-        }
-        a {
-            color: #1e90ff; /* Link color */
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline; /* Underline on hover */
-        }
-    </style>
+
 </head>
 
 <body>
@@ -45,31 +25,38 @@
     </header>
 
     <section>
-        <h1>My Resume</h1>
-        <h2>Josh</h2>
-        <p>123 Main St, Anytown, USA | (123) 456-7890 | josh@gmail.com</p>
+        <h1 style=" color:  white;"> Resume</h1>
+        <h2 style="color: white;">Objective</h2>
+        <p style="color: white;">Seeking a junior software developer position at a forward-thinking tech company where I can apply my knowledge in web development, programming, and software engineering to contribute to innovative projects and company growth.</p>
 
-        <h2>Objective</h2>
-        <p>Seeking a marketing coordinator position at ABC Company to leverage my skills in digital marketing and content creation.</p>
+        <h2 style="color: white;">Education</h2>
+        <p style="color:white;">Bachelor of Science in Information Technology, University of Mars, May 2023</p>
 
-        <h2>Education</h2>
-        <p>Bachelor of Arts in Marketing, University of Anytown, May 2020</p>
-
-        <h2>Experience</h2>
-        <p>Marketing Intern, XYZ Corp, June 2021 – August 2021</p>
+        <h2 style="color: white;">Experience</h2>
+        <p style="color: white;">IT Intern, ABC Tech Solutions, January 2023 – April 2023</p>
         <ul>
-            <li>Assisted in developing social media campaigns that increased engagement by 30%.</li>
-            <li>Conducted market research to identify new customer segments.</li>
+            <li style="color: white;">Assisted in designing and implementing a web-based inventory management system using JavaScript and PHP.</li>
+            <li style="color: white;">Maintained and updated the company website using HTML, CSS, and WordPress.</li>
+            <li style="color: white;">Provided technical support to end users and resolved software and hardware issues.</li>
         </ul>
 
-        <h2>Skills</h2>
-        <p>Digital Marketing, Content Creation, Social Media Management</p>
+        <h2 style="color: white;">Skills</h2>
+        <p style="color: white">JavaScript, HTML5, CSS3, PHP, Python, Java, SQL, Database Management, Web Development</p>
 
-        <h2>Certifications</h2>
-        <p>Google Analytics Certified, 2022</p>
+        <h2 style="color: white;">Projects</h2>
+        <p style="color: white"><strong></strong> - Developed a web-based platform for course management using Python and all kinds of language</p>
+        <p style="color: white;"><strong></strong> - Built a real-time weather application using JavaScript, HTML, and the OpenWeatherMap API.</p>
 
-        <h2>References</h2>
-        <p>Available upon request.</p>
+        <h2 style="color: white;">Certifications</h2>
+        <p style="color: white;">CompTIA A+ Certified, AWS Cloud Practitioner, Microsoft Azure Fundamentals</p>
+
+        <h2 style="color: white;">References</h2>
+        <p style="color: white;">Available upon request.</p>
+
+        <!-- Additional Information Section -->
+        <h2 style="color: white;">Additional Information</h2>
+        <p style="color: white;">Passionate about continuous learning and staying updated with the latest technologies and trends in the IT industry. Active member of the local tech community, participating in coding meetups and hackathons. Strong problem-solving skills and a collaborative team player.</p>
+    
     </section>
 
     <footer>
